# libgadget

./: README.md  meson.build  meson_options.txt
example/: gen.cpp
include/: gadget.hpp  gadget2.hpp  meson.build
src/: g2-ls.cpp  gadget-ls.cpp  gadget.cpp  gadget2.cpp  meson.build
tests/: meson.build
tests/compile-n-run/: meson.build  test.cpp
tests/osnapshot/: meson.build  test.cpp
